--- a/03_ExploratoryComponent_Amenities.ipynb
+++ b/03_ExploratoryComponent_Amenities.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "# How does amenities affect the price of a listing?\n",
     "\n",
-    "Looking into which amenities are most prevalent in the listings in the Copenhagen area, we wish to see which amenities are the most common, whether there is a price discrepancy between inclusion of certain amenities. \n",
+    "Looking into which amenities are most prevalent in the listings in the Copenhagen area, we wish to see which amenities are the most common and whether there is a price discrepancy between inclusion of certain amenities. \n",
     "\n",
     "We start off by getting an overview of which amenities are the most common."
    ]
