--- a/03_ExploratoryComponent_Amenities.ipynb
+++ b/03_ExploratoryComponent_Amenities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "Name: amenities, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(prices).T\n",
+    "df[\"Difference\"] = df[\"With\"] - df[\"Without\"]\n",
+    "df.sort_values(\"Difference\", ascending=False, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -113,57 +124,10 @@
        "data": [
         {
          "alignmentgroup": "True",
-         "hovertemplate": "With or without=Without<br>Amenity=%{x}<br>Price=%{y}<extra></extra>",
-         "legendgroup": "Without",
-         "marker": {
-          "color": "#636efa",
-          "pattern": {
-           "shape": ""
-          }
-         },
-         "name": "Without",
-         "offsetgroup": "Without",
-         "orientation": "v",
-         "showlegend": true,
-         "textposition": "auto",
-         "type": "bar",
-         "x": [
-          "Cooking basics",
-          "Hair dryer",
-          "Iron",
-          "Hangers",
-          "Bed linens",
-          "Washer",
-          "Oven",
-          "Dishwasher",
-          "TV",
-          "Coffee maker",
-          "Shampoo",
-          "Stove"
-         ],
-         "xaxis": "x",
-         "y": [
-          950,
-          927,
-          900,
-          994.5,
-          964,
-          914,
-          950,
-          900,
-          950,
-          929,
-          995,
-          968
-         ],
-         "yaxis": "y"
-        },
-        {
-         "alignmentgroup": "True",
          "hovertemplate": "With or without=With<br>Amenity=%{x}<br>Price=%{y}<extra></extra>",
          "legendgroup": "With",
          "marker": {
-          "color": "#EF553B",
+          "color": "#636efa",
           "pattern": {
            "shape": ""
           }
@@ -175,33 +139,80 @@
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "Cooking basics",
-          "Hair dryer",
-          "Iron",
-          "Hangers",
-          "Bed linens",
-          "Washer",
-          "Oven",
           "Dishwasher",
-          "TV",
           "Coffee maker",
-          "Shampoo",
-          "Stove"
+          "Iron",
+          "Washer",
+          "Hair dryer",
+          "Cooking basics",
+          "Oven",
+          "TV",
+          "Bed linens",
+          "Stove",
+          "Hangers",
+          "Shampoo"
          ],
          "xaxis": "x",
          "y": [
+          1100,
+          1042,
+          1000,
+          1000,
+          1000,
+          1000,
+          1000,
           1000,
           1000,
           1000,
           995,
-          1000,
-          1000,
-          1000,
-          1100,
-          1000,
-          1042,
-          989,
-          1000
+          989
+         ],
+         "yaxis": "y"
+        },
+        {
+         "alignmentgroup": "True",
+         "hovertemplate": "With or without=Without<br>Amenity=%{x}<br>Price=%{y}<extra></extra>",
+         "legendgroup": "Without",
+         "marker": {
+          "color": "#EF553B",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "Without",
+         "offsetgroup": "Without",
+         "orientation": "v",
+         "showlegend": true,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "Dishwasher",
+          "Coffee maker",
+          "Iron",
+          "Washer",
+          "Hair dryer",
+          "Cooking basics",
+          "Oven",
+          "TV",
+          "Bed linens",
+          "Stove",
+          "Hangers",
+          "Shampoo"
+         ],
+         "xaxis": "x",
+         "y": [
+          900,
+          929,
+          900,
+          914,
+          927,
+          950,
+          950,
+          950,
+          964,
+          968,
+          994.5,
+          995
          ],
          "yaxis": "y"
         }
@@ -1061,9 +1072,16 @@
     }
    ],
    "source": [
-    "px.bar(pd.DataFrame(prices).T, barmode=\"group\", \n",
+    "px.bar(df[[\"With\", \"Without\"]], barmode=\"group\", \n",
     "       title=\"Median price of listings with and without amenities\", \n",
     "       labels={\"index\": \"Amenity\", \"value\": \"Price\", \"variable\": \"With or without\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we see that "
    ]
   }
  ],
