--- a/03_ExploratoryComponent_Amenities.ipynb
+++ b/03_ExploratoryComponent_Amenities.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "Name: amenities, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -1042,7 +1042,7 @@
          }
         },
         "title": {
-         "text": "Median price of listings with and without amenities"
+         "text": "Median price of listings with and without amenities, sorted by difference"
         },
         "xaxis": {
          "anchor": "y",
@@ -1073,7 +1073,7 @@
    ],
    "source": [
     "px.bar(df[[\"With\", \"Without\"]], barmode=\"group\", \n",
-    "       title=\"Median price of listings with and without amenities\", \n",
+    "       title=\"Median price of listings with and without amenities, sorted by difference\", \n",
     "       labels={\"index\": \"Amenity\", \"value\": \"Price\", \"variable\": \"With or without\"})"
    ]
   },
@@ -1081,7 +1081,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that "
+    "This could be used by hosts to see which amenities they could add to their listing in order to justify a price increase and which amenities they can safely ignore.\n",
+    "\n",
+    "We see that listings with a dishwasher has the largest positive difference in median price. Interestingly, we see a negative differnece in median price when shampoo is mentioned as an amenity. One could speculate that this is because shampoo is a very common amenity and therefore not a selling point."
    ]
   }
  ],
